# tdt4225

./: .gitignore  DbConnector.py  README.md  insertion_script.py  pyproject.toml  queries.py  report.md
