[tool.poetry]
name = "ex2"
version = "0.1.0"
description = "MYSQL assignment for large data volumes"
authors = ["Plebbimon <sebastiansmaland@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
haversine = "^2.8.1"
tabulate = "^0.9.0"
mysql-connector-python = "8.0.33"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
